// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Can use <summary> as a controlled component 1`] = `
<DocumentFragment>
  <details>
    <summary
      class=""
    >
      a
    </summary>
  </details>
</DocumentFragment>
`;

exports[`Container.Base renders without errors 1`] = `
<DocumentFragment>
  <section
    class="flex flex-col gap-4 overflow-scroll
  overflow-x-auto [overflow-y:overlay] [scrollbar-gutter:stable] bg-[color:var(--form-foreground)]
  rounded p-4 shadow-gray-400 shadow-2xl"
  >
    View
  </section>
</DocumentFragment>
`;

exports[`Container.Center renders without errors 1`] = `
<DocumentFragment>
  <section
    class="flex flex-col gap-4 overflow-scroll
  overflow-x-auto [overflow-y:overlay] [scrollbar-gutter:stable] bg-[color:var(--form-foreground)]
  rounded p-4 shadow-gray-400 shadow-2xl max-w-[min(100%,var(--form-max-width))]
    mx-auto w-full text-[length:var(--form-font-size)] font-[family-name:var(--form-font-family)]"
  >
    View
  </section>
</DocumentFragment>
`;

exports[`Container.Full renders without errors 1`] = `
<DocumentFragment>
  <section
    class="flex flex-col gap-4 sm:h-full p-1 sm:p-4"
  >
    View
  </section>
</DocumentFragment>
`;

exports[`Container.FullGray renders without errors 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-4 sm:h-full p-1 sm:p-4 bg-[color:var(--form-background)]"
  >
    View
  </div>
</DocumentFragment>
`;

exports[`ErrorMessage renders without errors 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-2 p-2 text-white bg-red-500 rounded"
    role="alert"
  >
    View
  </div>
</DocumentFragment>
`;

exports[`H2 renders without errors 1`] = `
<DocumentFragment>
  <h2
    class="font-semibold text-black dark:text-white"
  >
    View
  </h2>
</DocumentFragment>
`;

exports[`H3 renders without errors 1`] = `
<DocumentFragment>
  <h3
    class="text-gray-500 dark:text-neutral-400"
  >
    View
  </h3>
</DocumentFragment>
`;

exports[`Key renders without errors 1`] = `
<DocumentFragment>
  <kbd
    class="bg-gray-200 border-1 dark:border-none dark:bg-neutral-700 rounded-sm mx-1 p-0.5"
  >
    View
  </kbd>
</DocumentFragment>
`;

exports[`Ul renders without errors 1`] = `
<DocumentFragment>
  <ul
    class=""
    role="list"
  >
    View
  </ul>
</DocumentFragment>
`;
